# Virtual_world_oop

./: README.md
Cpp/: Animal.cpp  Animal.h  Body.cpp  Body.h  CMakeLists.txt  Const.h  Human.cpp  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  Wolf.cpp  Wolf.h  World.cpp  World.h  main.cpp  mygotoxy.cpp  mygotoxy.h
Cpp/Body/: Animal.cpp  Animal.h  Body.cpp  Body.h  Human.h  Plant.cpp  Plant.h
Cpp/Body/Animals/: Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
Cpp/Body/Plants/: Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Pine_hogweed.cpp  Pine_hogweed.h  Sonchus.cpp  Sonchus.h  Wolfberries.cpp  Wolfberries.h
Java/: .gitignore
Java/saves/: 2023-05-13-00-50-37.ser  2023-05-13-00-58-21.ser  2023-05-14-20-56-33.ser  2023-05-14-20-58-00.ser  2023-06-26-13-22-45.ser
Java/src/: GameFrame.java  GamePanel.java  Main.java  World.java
Java/src/GUI/: BoardPanel.java  Box.java  Color_obj.java  LegendPanel.java  MenuPanel.java  NewsPanel.java  WorldFrame.java  WorldPanel.java
Java/src/World/: Point.java  World.java
Java/src/World/body/: Animal.java  Body.java  Plant.java
Java/src/body/: Animal.java  Body.java  Plant.java
Java/src/body/animal/: Wolf.java
Java/src/body/plant/: Grass.java
Python/: .gitignore  main.py
Python/GUI/: Box.py  Colors.py  Main_window.py  colors.py  main_window.py
Python/World/: point.py  world.py
Python/World/Body/: animal.py  body.py  plant.py
Python/World/Body/Animal/: antelope.py  cybersheep.py  fox.py  human.py  sheep.py  tortoise.py  wolf.py
(+16 files in other folders)
