cmake_minimum_required(VERSION 3.25)
project(Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cpp main.cpp World.h World.cpp Body/Body.h Body/Body.cpp Body/Plant.h Body/Plant.cpp Body/Animal.h Body/Animal.cpp Body/Human.h Body/Human.cpp Body/Animals/Wolf.h Body/Animals/Wolf.cpp Const.h mygotoxy.cpp Body/Animals/Sheep.h Body/Animals/Sheep.cpp Body/Plants/Grass.h Body/Plants/Grass.h Body/Plants/Grass.cpp Body/Plants/Sonchus.h Body/Plants/Sonchus.cpp Body/Plants/Guarana.h Body/Plants/Guarana.cpp Body/Plants/Wolfberries.h Body/Plants/Wolfberries.cpp Body/Plants/Pine_hogweed.h Body/Plants/Pine_hogweed.cpp)
